static/css/base.css
/* ... */
.security__icons{
    color: var(--first-color);
}

.security__details p {
    font-size: var(--medium-font-size);
    font-weight: bolder;
}

/* ---- Product cards ---- */

#featured h2{
   letter-spacing: 0.1em;
   font-weight: bold;
}
.card__wrapper{
  height: 550px;
  background: white;
  position: relative;
  overflow: hidden;
  border-radius: 10px 10px 10px 10px;
  box-shadow: 0;
  transform: scale(0.95);
  transition: box-shadow 0.5s, transform 0.5s;
}
.card__wrapper:hover{
    transform: scale(1);
    box-shadow: 5px 20px 30px rgba(0,0,0,0.2);
  }

.box{
    width:100%;
    height:100%;
}
.top__box{
    height: 75%;
    width:100%;
  -webkit-background-size: 100%;
  -moz-background-size: 100%;
  -o-background-size: 100%;
  background-size: 100%;
}

.top__box img{
    object-fit: cover;
    width: 100%;
    height: 100%;
}
.bottom{
    width: 100%;
    height: 30%;
}

.bottom__box{
    height:100%;
    width: 100%;
    background: var(--white-color);
    position:relative;
}
.card__details{
    padding: 20px;
}

.all-products .col-sm-12, 
.all-products .col-lg-4, 
.all-products .col-xl-3
.featured-card .col-sm-12, 
.featured-card .col-lg-4, 
.featured-card .col-xl-3{
    padding: 0;
}

/*------ Product Page ------*/

a.category-badge > span.badge:hover {
    background: var(--second-color) !important;
    color: #fff !important;
}

.border-full {
    color: var(--second-color);
}

.btt-button {
    height:42px;
    width: 42px;
    border-radius: 50%;
    position: fixed;
    bottom: 10px;
    right: 10px;
    background: var(--second-color);
}
.btt-button:hover{
    background: var(--first-color);
}

.btt-link{
    cursor: pointer;
}

/* Allauth form formatting */

.allauth-form-inner-content p {
    margin-top: 1.5rem; /* mt-4 */
    color: var(--second-color); /* text-secondary */
}

.allauth-form-inner-content input {
    border-color: var(--second-color);
    border-radius: 0;
}

.allauth-form-inner-content label:not([for='id_remember']) {
    display: none;
}

.allauth-form-inner-content input::placeholder {
    color: #aab7c4;
}

.allauth-form-inner-content button,
.allauth-form-inner-content input[type='submit'] {
	/* btn */
	display: inline-block;
    font-weight: 400;
    text-align: center;
    vertical-align: middle;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    padding: .375rem .75rem;
    font-size: 1rem;
    line-height: 1.5;
    border-radius: 0;
}

.allauth-form-inner-content button {
    background-color: var(--second-color);
    color: var(--white-color);
}

.allauth-form-inner-content a {
	color: var(--white-color) /* text-info */
}

/*------Product Form ------*/

.btn-file {
    position: relative;
    overflow: hidden;
}

.btn-file input[type="file"] {
    position: absolute;
    top: 0;
    right: 0;
    min-width: 100%;
    min-height: 100%;
    opacity: 0;
    cursor: pointer;
}

.custom-checkbox .custom-control-label::before {
    border-radius: 0;
    border-color: #dc3545;
}

.custom-checkbox .custom-control-input:checked~.custom-control-label::before {
    background-color: #dc3545;
    border-color: #dc3545;
    border-radius: 0;
}

/* ----- Blog page ------- */

.wrap_img {
	height:50vh;
	min-height: 30vh;
	object-fit: cover;
	width: 100%;
}

/* ----- Blog detail page ------- */

figure .wrap_img {
	display: block;
	max-height: 100vh;
	max-width: 80vh;
}

.blog_img {
	height: 100%;
	object-fit: cover;
	width: 100%;
}

/* ----- Footer ------- */

.footer
{
  background-color: var(--first-color);
  padding:45px 0 20px;
  font-size:15px;
  line-height:24px;
  color: var(--second-color);
}
.footer hr
{
  border-top-color: var(--second-color);
  opacity:0.5
}
.footer hr.small
{
  margin:20px 0
}
.footer h5
{
  color: var(--second-color);
  font-size:16px;
  font-weight: bolder;
  text-transform:uppercase;
  margin-top:5px;
  letter-spacing:2px
}

.footer .social-icons a
{
  width:40px;
  height:40px;
  line-height:40px;
  margin-left:6px;
  margin-right:0;
  border-radius:100%;
  background-color: var(--second-color);
}
.copyright
{
  margin:0
}

.social-icons a:first-child {
    margin-left: 0;
}

/* ----- Media Queries ------- */

/* Slightly larger container on xl screens */
@media (min-width: 1200px) {
  .container {
    max-width: 80%;
  }
}

/* Avoid overflow/white screen in authentification templates */
@media (min-width:800px) {
    .allauth-container {
      height: 100vh;
  }
}

/* fixed top navbar only on medium and up */
@media (min-width: 992px) {
    .fixed-top-desktop-only {
        position: fixed;
        top: 0;
        right: 0;
        left: 0;
        z-index: 1030;
    }

    .header-container {
        padding-top: 170px;
    }

    body {
    height: calc(100vh - 164px);
  }
}

@media screen and (min-width: 1466px) {
  body {
    margin: 0; 
    }
    .home{
    grid-template-columns: 4fr 3fr;
    grid-template-rows: 1fr;
     height: 100vh;
    }
    .home__primary {
    justify-content: center;
    }
    .home__img img {
    position: absolute;
    width: 600px;
    height: 600px;
    top: 5%;
    left: 0;
    right: 0;
    bottom: 0;
    margin: auto;
    z-index: var(--z-normal);
    }
    .btn__hero{
    position: absolute;
    top: 85%;
    left: auto;
    right: 41%;
    margin: auto;
    z-index: var(--z-normal);
    background: var(--second-color);
    color: white;
    margin-top: 15px;
    }
    .home__year {
    writing-mode: vertical-rl;
    margin-left: 5rem;
    }
    .text__box {
    align-items: center;
    justify-items: center;
}
}
/* ... */

